Web Security with okta implemented

--- a/APIGateway/src/main/resources/application.properties
+++ b/APIGateway/src/main/resources/application.properties
@@ -19,3 +19,9 @@ spring.cloud.gateway.mvc.routes[1].predicates[0]=Path=/hotels/**
 spring.cloud.gateway.mvc.routes[2].id=RATING-SERVICE
 spring.cloud.gateway.mvc.routes[2].uri=lb://RATING-SERVICE
 spring.cloud.gateway.mvc.routes[2].predicates[0]=Path=/ratings/**
+
+okta.oauth2.issuer=https://dev-86758635.okta.com/oauth2/default
+okta.oauth2.audience=api://default
+okta.oauth2.client-id=0oaka1cual8BzkOzo5d7
+okta.oauth2.client-secret=Aoi_ruDSCSLN3eKSLCZSoKBDg8BNulcFDtkOqFrnwmKytPKcs2clU-vM9f3er0iU
+okta.oauth2.scopes=openid, profile, email, offline_access
