--- a/HotelService/src/main/resources/application.properties
+++ b/HotelService/src/main/resources/application.properties
@@ -15,3 +15,5 @@ eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
 
+okta.oauth2.issuer=https://dev-86758635.okta.com/oauth2/default
+okta.oauth2.audience=api://default
