--- a/HotelService/pom.xml
+++ b/HotelService/pom.xml
@@ -46,10 +46,15 @@
     	</dependency>
     	
     	<dependency>
-      		<groupId>org.springframework.cloud</groupId>
-      		<artifactId>spring-cloud-starter-config</artifactId>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-security</artifactId>
     	</dependency>
-
+    	<dependency>
+      		<groupId>com.okta.spring</groupId>
+      		<artifactId>okta-spring-boot-starter</artifactId>
+      		<version>3.0.7</version>
+    	</dependency>
+    	
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
