--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -51,9 +51,34 @@
     	</dependency>
     	
     	<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+    	
+    	<dependency>
       		<groupId>org.springframework.cloud</groupId>
-      		<artifactId>spring-cloud-starter-config</artifactId>
+      		<artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
     	</dependency>
+    	
+    	<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-oauth2-client</artifactId>
+    	</dependency>
+    	<dependency>
+      		<groupId>org.springframework.boot</groupId>
+      		<artifactId>spring-boot-starter-security</artifactId>
+    	</dependency>
+    	<dependency>
+      		<groupId>com.okta.spring</groupId>
+      		<artifactId>okta-spring-boot-starter</artifactId>
+      		<version>3.0.7</version>
+    	</dependency>
+
     	
 		<dependency>
       		<groupId>org.springframework.cloud</groupId>
