--- a/UserService/src/main/resources/application.properties
+++ b/UserService/src/main/resources/application.properties
@@ -14,3 +14,39 @@ eureka.client.fetch-registry=true
 eureka.client.register-with-eureka=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
+
+management.health.circuitbreakers.enabled=true
+management.endpoints.web.exposure.include=health
+management.endpoint.health.show-details=always
+
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.register-health-indicator=true
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.event-consumer-buffer-size=10
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.failure-rate-threshold=50
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.minimum-number-of-calls=5
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.automatic-transition-from-open-to-half-open-enabled=true
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.wait-duration-in-open-state=6s
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.permitted-number-of-calls-in-half-open-state=3
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.sliding-window-size=10
+resilience4j.circuitbreaker.instances.ratingCircuitBreaker.sliding-window-type=COUNT_BASED
+
+
+resilience4j.retry.instances.ratingRetry.max-attempts=3
+resilience4j.retry.instances.ratingRetry.wait-duration=5s
+
+resilience4j.ratelimiter.instances.userRateLimiter.limit-refresh-period=4s
+resilience4j.ratelimiter.instances.userRateLimiter.limit-for-period= 2
+resilience4j.ratelimiter.instances.userRateLimiter.timeout-duration=0s
+
+
+okta.oauth2.issuer=https://dev-86758635.okta.com/oauth2/default
+okta.oauth2.audience=api://default
+
+
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://dev-86758635.okta.com/oauth2/default
+spring.security.oauth2.client.registration.my-internal-client.provider=okta
+spring.security.oauth2.client.registration.my-internal-client.authorization-grant-type=client_credentials
+spring.security.oauth2.client.registration.my-internal-client.scope=internal
+spring.security.oauth2.client.registration.my-internal-client.client-id=0oaka1cual8BzkOzo5d7
+spring.security.oauth2.client.registration.my-internal-client.client-secret=Aoi_ruDSCSLN3eKSLCZSoKBDg8BNulcFDtkOqFrnwmKytPKcs2clU-vM9f3er0iU
+
+spring.security.oauth2.client.provider.okta.issuer-uri=https://dev-86758635.okta.com/oauth2/default
